--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -10,3 +10,25 @@ body {
 #__next {
   @apply h-full w-full;
 }
+.swiper {
+  width: 100%;
+  height: 100%;
+  padding-top: 50px;
+  padding-bottom: 50px;
+ 
+}
+
+.swiper-slide {
+  background-position: center;
+  background-size: cover;
+  width: 100%;
+  height: 100%;
+}
+
+.swiper-slide img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  
+  
+}
